@@ -1,3 +1,5 @@
+* correcting SQL commands for solution scheduling
+
 rel 0.2.5
 * small fixes for php7
 
